
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 FEB 06a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Qe() and find_dSe_dU_transport_Qe(), added relaxation with translational energy
      modes of the neutrals
  * in model/fluid/doc/Transport_Equations/report.tex
    - in the section "Electron Energy Relaxation Terms", added relaxation with translational energy
      modes of the neutrals
    

2024 FEB 05a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - improved Arakonic model reactions
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_NO()


2024 FEB 02a
  * in model/chem/_NH3_Plasma_10s/chem.c
    - added CHEMMODEL_ARAKONI2007 model
  * in model/thermo/_generic/enthalpy.c and model/thermo/_generic/thermo.c 
    and model/transport/_Dixon-Lewis/transport.c
    - added species NH3v
  * in model/chem/_NH3_Plasma_10s/
    - added arakoni2007.c
    

2024 FEB 01a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_name_fluid() and find_post_variable_value_fluid(), fixed
      bugs related to AVERAGEDRATES
  * in model/transport/_Gupta-Yos/transport.c
    - renamed _lnLambda() to _lnLambda_local()
    

2024 JAN 31a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_value_fluid(), now calls find_Qe() to determine Qe instead of 
      computing it explicitly
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - updated find_Qe(), find_Se(), find_dSe_dU_transport_Qe()
  * in model/fluid/doc/Transport_Equations/report.tex
    - added the section "Electron Energy Relaxation Terms"
  * in model/share/transport_share.c
    - removed "static" in front of double _lnLambda()
  * in model/thermo/_generic/electronimpact.c