@@ -7,6 +7,11 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2024 FEB 06b
+  * in model/thermo/_generic/enthalpy.c
+    - added the vibrational energy to species NH3v
+    
+
 2024 FEB 06a
   * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
     - in find_Qe() and find_dSe_dU_transport_Qe(), added relaxation with translational energy
